Try to clean app state after each test