@@ -283,20 +283,14 @@ public class Tests {
     }
 
     public void cleanAppState() throws IOException, InterruptedException {
-        String[] args4 = new String[] {"/bin/bash", "-c", "echo prova"};
-        Process proc4 = new ProcessBuilder(args4).start();
-
-        //stop application
-        String[] args1 = new String[] {"/bin/bash", "-c", "adb shell am force-stop it.feio.android.omninotes.alpha"};
-        Process proc1 = new ProcessBuilder(args1).start();
+         //stop application
+        Runtime.getRuntime().exec("/bin/bash -c adb shell am force-stop it.feio.android.omninotes.alpha");
         Thread.sleep(10000);
         //clean application state
-        String[] args2 = new String[] {"/bin/bash", "-c", "adb shell pm clear it.feio.android.omninotes.alpha"};
-        Process proc2 = new ProcessBuilder(args2).start();
+        Runtime.getRuntime().exec("/bin/bash -c adb shell pm clear it.feio.android.omninotes.alpha");
         Thread.sleep(10000);
         //restart application
-        String[] args3 = new String[] {"/bin/bash", "-c", "adb shell am start it.feio.android.omninotes.alpha/it.feio.android.omninotes.MainActivity"};
-        Process proc3 = new ProcessBuilder(args3).start();
+        Runtime.getRuntime().exec("/bin/bash -c adb shell am start it.feio.android.omninotes.alpha/it.feio.android.omninotes.MainActivity");
         Thread.sleep(10000);
 
     }
